# kiwoom-portfolio-trader

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: step-01-project-init.md  step-02-supabase-schema.md
scripts/: verify_step.py
