[project]
name = "kiwoom-portfolio-trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kiwoompy",
    "httpx",
    "supabase",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
trader = "trader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.6",
]
